# grcp_example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp  server.h
src/protos/: worker.proto
